--- a/css/divine-comedy.css
+++ b/css/divine-comedy.css
@@ -61,7 +61,7 @@ section > h1{
 }
 
 .text-block{
-    width: 870px;
+    width: 880px;
     line-height: 1.7;
     font-size: 1.1rem;
 }
